// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The DB-Handler should create a database when initialized 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "connectionTimeoutMillis": 5000,
        "database": "someDb",
        "host": "[::1]",
        "password": "secret",
        "port": "1337",
        "user": "user",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "none": [MockFunction] {
          "calls": [
            [
              "CREATE TABLE IF NOT EXISTS users (email varchar(65) NOT NULL PRIMARY KEY);",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "oneOrNone": [MockFunction],
        "result": [MockFunction],
      },
    },
  ],
}
`;

exports[`The DB-Handler should create a database when initialized 2`] = `
[MockFunction] {
  "calls": [
    [
      "CREATE TABLE IF NOT EXISTS users (email varchar(65) NOT NULL PRIMARY KEY);",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`The DB-Handler should execute the correct call to the database on addUser 1`] = `
[MockFunction] {
  "calls": [
    [
      "INSERT INTO users (email) VALUES ($1)",
      "Test Email",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`The DB-Handler should execute the correct call to the database on checkMail 1`] = `
[MockFunction] {
  "calls": [
    [
      "SELECT email FROM users WHERE email=$1",
      "Test Email",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The DB-Handler should execute the correct call to the database on removeUser 1`] = `
[MockFunction] {
  "calls": [
    [
      "DELETE FROM users WHERE email=$1",
      "Test Email",
      [Function],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
